# marcs-pics

./: APP_DESIGN.md  README.md
api/: .gitignore  Cargo.toml  README.md  photo_box.http  test.http  user.http
api/http/: auth.http  image.http  photo_box.http  shared_collections.http
api/site/: index.html  index.js  style.css
api/site/collection/: index.html  index.js
api/site/edit-photo-box/: index.html  index.js
api/site/js/: auth.js  collection-image.js  collection.js  photo-box.js  reactivity.js  utils.js
api/site/js/components/: index.js  mp-collection-summary.js  mp-collection-viewer.js  mp-current-image.js  mp-details-list.js  mp-details.js  mp-icon.js  mp-image-switcher.js  mp-light-box.js  mp-location-picker.js  mp-preview-image.js  mp-tag.js  mp-tags-container.js
api/site/login/: index.html  index.js
api/site/new-collection/: index.html  index.js
api/site/new-photo-box/: index.html  index.js
api/src/: main.rs  utils.rs
api/src/db/: mongodb.rs
api/src/guards/: has_session.rs  mod.rs
api/src/handlers/: auth.rs  image.rs  mod.rs  photo_box.rs  shared_collection.rs  upload.rs  user.rs
api/src/handlers/user/: mod.rs
api/src/models/: auth.rs  collection_image.rs  collection_image_comment.rs  mod.rs  photo_box.rs  shared_collection.rs  user.rs
api/src/models/collection_image/: mod.rs
api/src/models/collection_image_comment/: mod.rs
api/src/models/photo_box/: mod.rs
api/src/models/shared_collection/: mod.rs
api/src/models/user/: mod.rs
