[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
bcrypt = "0.13.0"
rand = "0.8.5"
base64 = "0.13.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["sync"]
